# quickymesh

./: .dockerignore  .env.example  .gitignore  API.md  ARCHITECTURE_PLAN.md  CHANGELOG.md  CLI_MANUAL.md  CONTRIBUTING.md  DOC.md  LICENSE  NEW_APPROACH.md  README.MD  README.md  UPDATES.md  api_server.py  defaults.yaml  main.py  pyproject.toml  qm_cli.py  requirements.txt  users.yaml.example
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
blender_scripts/: cleanup.py  screenshot.py
comfyui_workflows/: controlnet_restyle.json  flux_dev_fp8.json  trellis_generate.json  trellis_texture.json
docker/: .env.example  build_run.ps1  build_run.sh  docker-compose.yml  download_models.sh  extra_model_paths.yaml.example  test_comfyui.py
docker/build-wheels/: Dockerfile
docker/comfyui/: .dockerignore  Dockerfile  docker-compose.yml
docker/comfyui-trellis/: Dockerfile  startup.sh
docker/models/: .gitignore
examples/: prompts.md
scripts/: smoke_test_gemini.py  smoke_test_screenshots.py  smoke_test_trellis.py
smoke_trellis/meshes/: initial_mesh.glb
src/: broker.py  concept_art_pipeline.py  config.py  image_utils.py  logging_config.py  mesh_pipeline.py  screenshot_pipeline.py  state.py  vram_arbiter.py
src/agent/: cli_main.py  pipeline_agent.py  worker_threads.py
src/api/: app.py  auth.py  event_bus.py  models.py
src/api/routers/: assets.py  events.py  pipelines.py  pipelines_3d.py  review.py  status.py
src/cli/: __init__.py  client.py  main.py
src/prompt_interface/: __init__.py  base.py  cli.py  mock.py
src/workers/: __init__.py  comfyui_client.py  concept_art.py  screenshot.py  trellis.py
tests/: conftest.py  test_api_auth.py  test_api_event_bus.py  test_api_routers.py  test_broker.py  test_cli_client.py  test_cli_main.py  test_concept_art_pipeline.py  test_concept_art_worker.py  test_config.py  test_image_utils.py  test_mesh_pipeline.py  test_pipeline_agent.py  test_screenshot_pipeline.py  test_state.py  test_trellis_worker.py  test_vram_arbiter.py  test_worker_threads.py
